--- a/src/app/modules/secure/prediction-result/prediction-result.component.scss
+++ b/src/app/modules/secure/prediction-result/prediction-result.component.scss
@@ -15,8 +15,12 @@
 }
 
 .head-icon {
-    font-size: 1.3rem;
-    color: var(--main-color);
+    font-size: 1.5rem;
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
+    text-align: center;
+    border-radius: 0.375rem;
 }
 
 .btn-back {
