--- a/src/app/modules/secure/prediction-result/prediction-result.component.scss
+++ b/src/app/modules/secure/prediction-result/prediction-result.component.scss
@@ -35,3 +35,58 @@
 .btn-back:hover {
     background-color: var(--bs-dark-bg-subtle) !important;
 }
+
+#accordionExample {
+    font-size: 0.8rem;
+}
+
+#accordionExample .accordion-item {
+    margin-bottom: 5px;
+    border: solid 1px #ddd;
+    border-radius: 0.375rem;
+}
+
+#accordionExample .accordion-button {
+    font-size: 0.8rem;
+    padding: 0.5rem 0.75rem;
+    border-radius: 0.375rem;
+    box-shadow: none;
+}
+
+#accordionExample .accordion-button::after {
+    background-image: none;
+    content: '\f067'; // for plus icon
+    // content: '\f068'; // for minus icon
+    font-family: 'Line Awesome Free';
+    font-weight: 900;
+    text-align: right;
+    transition: all 5s ease-in-out;
+    transform: rotate(0deg);
+}
+
+#accordionExample .accordion-button:not(.collapsed)::after {
+    background-image: none;
+    content: '\f068'; // for minus icon
+    font-family: 'Line Awesome Free';
+    font-weight: 900;
+    text-align: right;
+    transition: all 5s ease-in-out;
+    transform: rotate(0deg);
+}
+
+#accordionExample .accordion-button:not(.collapsed) {
+    background-color: var(--main-light-color);
+    color: var(--main-color);
+    box-shadow: none;
+    font-weight: 600;
+    border-radius: 0.375rem 0.375rem 0 0;
+}
+
+#accordionExample .accordion-body .icon {
+    font-size: 1.1rem;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    border-radius: 0.375rem;
+}
