--- a/src/app/modules/secure/prediction-result/prediction-result.component.html
+++ b/src/app/modules/secure/prediction-result/prediction-result.component.html
@@ -39,22 +39,27 @@
         <!-- Health Assessment -->
         <div class="card rounded-3 border-0 mb-3">
             <div class="card-header bg-transparent border-bottom-0">
-                <div class="d-flex">
+                <div class="d-flex align-items-center">
                     <div class="flex-shrink-0">
                         <i class="las la-stethoscope head-icon text-main bg-main-light"></i>
                     </div>
                     <div class="flex-grow-1 ms-2">
-                        <div class="fs-main fw-bold mb-1 text-main">Health Assessment</div>
-                        <div class="fs-75 text-muted">
-                            Applicable for
-                            <span *ngFor="let applicable of predictionResult?.jsonResult?.ApplicableFor">
-                                <strong>{{applicable.AnimalType}},</strong>
-                            </span>
-                        </div>
+                        <div class="fs-main fw-bold text-main">Health Assessment</div>
                     </div>
                 </div>
             </div>
             <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="form-label mb-0">Applicable for :</div>
+                        <div class="d-flex gap-2">
+                            <span *ngFor="let applicable of predictionResult?.jsonResult?.ApplicableFor">
+                                <span
+                                    class="badge bg-primary-subtle text-primary px-2 fs-75">{{applicable.AnimalType}}</span>
+                            </span>
+                        </div>
+                    </div>
+                </li>
                 <li class="list-group-item">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="form-label mb-0">Priority Level :</div>
@@ -119,7 +124,7 @@
             <div class="card-header bg-transparent border-bottom-0">
                 <div class="d-flex align-items-center gap-2 text-indigo">
                     <i class="las la-award head-icon bg-indigo-subtle"></i>
-                    <span class="fs-80 fw-bold">Monitoring Recommendations</span>
+                    <span class="fs-main fw-bold">Monitoring Recommendations</span>
                 </div>
             </div>
             <div class="card-body">
@@ -219,7 +224,7 @@
             <div class="card-header bg-transparent border-bottom-0">
                 <div class="d-flex align-items-center gap-2">
                     <i class="las la-temperature-high head-icon text-danger bg-danger-subtle"></i>
-                    <div class="fs-80 fw-bold text-danger">Climate Considerations</div>
+                    <div class="fs-main fw-bold text-danger">Climate Considerations</div>
                 </div>
             </div>
             <ul class="list-group list-group-flush fs-80">
@@ -245,7 +250,7 @@
                 </div>
                 <div class="flex-grow-1 ms-3">
                     <div class="d-flex justify-content-between align-items-center mb-2">
-                        <div class="fs-80 fw-bold">Risk Level</div>
+                        <div class="fs-main fw-bold">Risk Level</div>
                         <div class="badge bg-danger ms-auto fs-70">
                             {{predictionResult?.jsonResult?.RiskLevel}}
                         </div>
@@ -258,7 +263,7 @@
 
             <div class="form-data mb-2">Specific Risks :</div>
             <div class="d-flex flex-wrap align-items-center gap-2">
-                <span class="badge bg-pink-subtle text-dark fs-70 p-2"
+                <span class="badge bg-pink-subtle text-dark fs-75 px-2"
                     *ngFor="let risks of predictionResult?.jsonResult?.SpecificRisks">
                     {{risks.Risk}}
                 </span>
